apps/infra/kubernetes-dashboard/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
spec:
  routes:
    - match: Host(`dashboard.sachathommet.fr`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
  tls:
    certResolver: letsencrypt-prod
