apps/infra/kubernetes-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: kubernetes-dashboard
  namespace: infra-kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.sachathommet.fr
      http:
        paths:
          - backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - dashboard.sachathommet.fr
      secretName: kubernetes-dashboard-certs
